// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Prototypes/TabNav Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <TabNav>
    <nav
      aria-label="Secondary navigation"
      className="tab-nav"
    >
      <ul>
        <li>
          <a
            className="is-current"
            href="#"
          >
            Applications
          </a>
        </li>
        <li>
          <a
            href="#"
          >
            Flags
          </a>
        </li>
      </ul>
    </nav>
  </TabNav>
</div>
`;

exports[`Storyshots Prototypes/TabNav Tab Nav Count 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <TabNav>
    <nav
      aria-label="Secondary navigation"
      className="tab-nav"
    >
      <ul>
        <li>
          <a
            href="#"
          >
            Applications
          </a>
        </li>
        <li>
          <a
            className="is-current"
            href="#"
          >
            Flags 
            <span
              className="tag bg-gray-450 text-gray-900 ml-1"
            >
              22
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </TabNav>
</div>
`;
